# backup-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker.nix  flake.nix  module.nix  overlay.nix  package.nix
.github/workflows/: ci.yaml  docker.yaml
src/: api.rs  backup.rs  main.rs  store.rs
