[package]
name = "backup"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
md5 = "0.7.0"
hex = "0.4.3"
dotenv = "0.15.0"
main_error = "0.1.2"
demostf-client = { version = "0.3.1", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.33"
tracing-subscriber = "0.3.11"
bytes = "1.1.0"
futures-util = "0.3.21"

[profile.release]
lto = true