[package]
name = "demostf-backup"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
thiserror = "1.0.56"
dotenvy = "0.15.7"
main_error = "0.1.2"
demostf-client = { version = "0.4.3", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"
md5 = "0.7.0"

[profile.release]
lto = true
